fix spacing

--- a/src/stylesheets/pages/_index.scss
+++ b/src/stylesheets/pages/_index.scss
@@ -631,6 +631,9 @@ label ~ .selector {
 .ValueList .facet:not(.edit) .empty.ValueList { max-height:0; transition:500ms; transition-delay: 0s;
   & + .blockAdd { display:none; }
 }
+
+.ValueList .facet:not(.edit) > .card > div:not(.unset) ~ div .resSelect { margin-top: 16px; }
+
 .ValueList .facet.edit .ValueList { overflow:visible; max-height:none; } 
 .ValueList .facet.edit .ValueList .facet:not(.edit) .ValueList { overflow:hidden; } 
 
